access log and lock version of seldon-core
Signed-off-by: ericy <ericy@infuseai.io>

--- a/tensorflow2_mnist/Dockerfile
+++ b/tensorflow2_mnist/Dockerfile
@@ -9,4 +9,4 @@ ENV MODEL_NAME MNISTModel
 ENV SERVICE_TYPE MODEL
 ENV PERSISTENCE 0
 
-CMD exec seldon-core-microservice $MODEL_NAME --service-type $SERVICE_TYPE --persistence $PERSISTENCE
+CMD exec seldon-core-microservice $MODEL_NAME --service-type $SERVICE_TYPE --persistence $PERSISTENCE --access-log
