--- a/tensorflow2_prepackage/base_image/Dockerfile
+++ b/tensorflow2_prepackage/base_image/Dockerfile
@@ -10,4 +10,4 @@ ENV MODEL_NAME Model
 ENV SERVICE_TYPE MODEL
 ENV PERSISTENCE 0
 
-CMD exec seldon-core-microservice $MODEL_NAME --service-type $SERVICE_TYPE --persistence $PERSISTENCE
+CMD exec seldon-core-microservice $MODEL_NAME --service-type $SERVICE_TYPE --persistence $PERSISTENCE --access-log
